@@ -1,5 +1,5 @@
 # Download a Docker tarball from https://github.com/SolaceLabs/pretty-dump/releases
-# Load into Docker Images with: docker load -i solace-pretty-dump-1.0.0.tar.gz
+# Load into Docker Images with: docker load -i solace-pretty-dump-1.1.0.tar.gz
 #
 # To RUN:
 #
@@ -21,20 +21,20 @@
 # To BUILD:
 #
 #     1) ./gradlew clean assemble      (or download a pre-built release from GitHub)
-#     2) cd build/distributions
-#     3) unzip prettydump.zip
-#     4) cd ../..
-#     5) docker build -t solace-pretty-dump:latest --file Dockerfile .
-#     6) docker save solace-pretty-dump:latest | gzip > solace-pretty-dump-1.0.0.tar.gz
+#     2) docker build -t solace-pretty-dump:latest -t solace-pretty-dump:1.1.0 --file Dockerfile .
+#     3) docker save solace-pretty-dump:latest | gzip > solace-pretty-dump-x.y.z.tar.gz
 #
 
-# Go and make a custom JRE in the distribution lib folder:
-# jlink --add-modules ALL-MODULE-PATH --strip-debug --no-man-pages --no-header-files --compress=2  --output ../jre
 
-# greetings.Dockerfile
+# This is where the actual Dockerfile starts
 
-#FROM amazoncorretto:17-alpine as corretto-jdk
+LABEL version=1.1.0
+LABEL author="Aaron @ Solace"
+LABEL repo="https://github.com/SolaceLabs/solace-pretty-dump"
+
+
 FROM amazoncorretto:22-alpine as corretto-jdk
+#FROM amazoncorretto:17-alpine as corretto-jdk
 
 # required for strip-debug to work
 RUN apk add --no-cache binutils
@@ -58,6 +58,6 @@ RUN mkdir -p /opt/pretty
 WORKDIR /opt/pretty
 
 # after doing ./gradlew assemble, unzip a distribution, and then this will copy all the build/staged into the Docker image
-COPY build/distributions/prettydump/ ./
+COPY build/staged/ ./
 
 ENTRYPOINT ["./bin/prettydump"] 
